--- a/numbers/style/style.css
+++ b/numbers/style/style.css
@@ -204,6 +204,9 @@ strong.important {
 	font-weight: bold;
 	cursor: default;
 }
+.tbox .tb-title {
+	font-size: 13px;
+}
 .tbox .tb-val{
 	color:#ffffff;
 	font-size: 22px
